--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,10 +12,19 @@ body {
     font-family: sans-serif;
     color: white;
     background-color: #222;
+    text-align: center;
 }
 
 * {
     box-sizing: border-box;
+}
+
+.scaling-container {
+    transition: transform 0.2s;
+    transform-origin: top;
+    display: inline flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .game-grid {
@@ -25,10 +34,7 @@ body {
     grid-template-rows: repeat(7, min-content);
     grid-template-columns: repeat(7, min-content);
     gap: 4px;
-    margin: 30px auto;
-
-    transition: transform 0.2s;
-    transform-origin: top;
+    margin: 20px 0;
 }
 
 .game-cell {
