--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Peg Solitaire</title>
+<link data-trunk rel="copy-dir" href="img">
 <style>
 
 html,
