--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Peg Solitaire</title>
 <link data-trunk rel="copy-dir" href="img">
+<link data-trunk rel="copy-dir" href="bloom-filters">
 <style>
 
 html,
